Closed
Bug 238052
Opened 21 years ago
Closed 20 years ago
In-page tooltips have no border, although gtk-style tooltips do have a border.
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: blizzard)
References
()
Details
Attachments
(2 files, 1 obsolete file)
125 bytes,
text/html
|
Details | |
2.18 KB,
patch
|
mpgritti
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7b) Gecko/20040318 Epiphany/1.3.0
In any gtk+ application, tooltips have a border. However, in the web page,
tooltips (title attribute on a link) do not have a border.
Reproducible: Always
Steps to Reproduce:
Reporter | ||
Comment 1•21 years ago
|
||
Reporter | ||
Comment 2•21 years ago
|
||
It is necessary to paint the border on every expose event, not just once
initially.
I've also changed the border width of the tooltip window from 3 to 4, because
that's what gtk+' gtktooltips.c has too.
I've tested the fix on my gtk+-2 build; it should be fine for gtk+-1.2 too but
I don't have a build to test.
Reporter | ||
Updated•21 years ago
|
Attachment #144367 -
Flags: review?(blizzard)
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Reporter | ||
Updated•21 years ago
|
Attachment #144367 -
Flags: review?(blizzard) → review?(blizzard)
Reporter | ||
Updated•21 years ago
|
Attachment #144367 -
Flags: review?(blizzard) → review?(marco)
Reporter | ||
Comment 3•21 years ago
|
||
Reporter | ||
Updated•21 years ago
|
Attachment #144367 -
Attachment is obsolete: true
Reporter | ||
Updated•21 years ago
|
Attachment #163420 -
Flags: superreview?(blizzard)
Attachment #163420 -
Flags: review?(marco)
Reporter | ||
Updated•21 years ago
|
Attachment #144367 -
Flags: review?(marco)
Updated•21 years ago
|
Attachment #163420 -
Flags: review?(marco) → review+
Assignee | ||
Updated•21 years ago
|
Attachment #163420 -
Flags: superreview?(blizzard) → superreview+
Comment 4•20 years ago
|
||
checked in on the trunk
Checking in EmbedWindow.cpp;
/cvsroot/mozilla/embedding/browser/gtk/src/EmbedWindow.cpp,v <-- EmbedWindow.cpp
new revision: 1.31; previous revision: 1.30
done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•