Fix bug 238052. Paint the tooltip border on every expose event. Patch by chpe@gnome.org r=marco sr=blizzard